# test-c-rust-wasm

./: .clang-format  Cargo.toml  README.md  add.ll  add.wasm  advanced_maths.wasm  build.rs  build_both.sh  build_c.sh  build_rust.sh  build_subtract.sh  build_subtract_with_llvm_ir.sh  index.html  maths.wasm  package-lock.json  package.json  r_maths.ll  subtract.ll  subtract.wasm
crates/1_linking_manually/: Cargo.toml  README.md  build.sh  index.html
crates/1_linking_manually/src/: lib.rs  maths.c  subtract.h
crates/2_with_cc/: Cargo.toml  README.md  build.rs  build.sh  build_with_wasm_pack.sh  index.html
crates/2_with_cc/src/: lib.rs  maths.c
crates/3_libc_and_heap_allocation/: Cargo.toml  README.md  build.rs  build.sh  build_with_wasm_pack.sh  index.html
crates/3_libc_and_heap_allocation/src/: lib.rs  maths.c  subtract.h
crates/4_wasm_bindgen/: Cargo.toml  README.md  build.rs  build_with_wasm_pack.sh  index.html
crates/4_wasm_bindgen/src/: calculator.h  lib.rs  memory.js
crates/5_extern_types/: README.md  build.rs  build.sh  build_with_wasm_pack.sh  index.html
crates/5_extern_types/src/: calculator.c  calculator.h  lib.rs  (+2 more)
crates/5_rust_bindgen/: Cargo.toml  README.md  build.rs  index.html
crates/6_extern_types/: Cargo.toml  README.md  build.sh  index.html
crates/6_rust_bindgen/: Cargo.toml  README.md  build_with_wasm_pack.sh  index.html
src/: lib.rs
wasi/: build_wasi.sh  copy.c  copy.wasm  index.html
wasm/: 01_build_llvm_ir.sh  02_compile_object_file.sh  add.c  build_wasm.sh  build_wasm_with_llvm_ir.sh  index.html  maths.c  maths.ll
(+7 files in other folders)
